* Update copyright year to 2003.
git-svn-id: http://svn.php.net/repository/pear/packages/Cache_Lite/trunk@110306 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/TODO
+++ b/TODO
@@ -88,7 +88,7 @@ this shouldn't be a big deal.
 <?
 /*
  * phpGACL - Generic Access Control List - Hashed Directory Caching. 
- * Copyright (C) 2002 Mike Benoit
+ * Copyright (c) 2002-2003 Mike Benoit
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
