--- a/README
+++ b/README
@@ -1,19 +1,15 @@
 This package is http://pear.php.net/package/Cache_Lite and has been migrated from http://svn.php.net/repository/pear/packages/Cache_Lite
 
-Please report all new issues via the PEAR bug tracker.
+Please report all new issues via the (PEAR bug tracker)[http://pear.php.net/bugs/].
 
-If this package is marked as unmaintained and you have fixes, please submit your pull requests and start discussion on the pear-qa mailing list.
-
-To test, run either
-$ phpunit tests/
-  or
-$ pear run-tests -r
+To test this package, run
+    phpunit tests/
 
 To build, simply
-$ pear package
+    pear package
 
 To install from scratch
-$ pear install package.xml
+    pear install package.xml
 
 To upgrade
-$ pear upgrade -f package.xml
+    pear upgrade -f package.xml
